--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,6 +1,8 @@
 accuweather.apiKey="your api key from Weather Service https://developer.accuweather.com/"
-accuweather.language=ru-ru
-accuweather.details=true
+accuweather.language=pl-pl
+
+#Unique ID used to search for a specific location more https://developer.accuweather.com/
+accuweather.locationKey=270933
 accuweather.details=true
 accuweather.metric=true
 
